# 20250731_amlaa_lab1

20250731_amlaa_lab1/: Makefile  README.md  pyproject.toml
20250731_amlaa_lab1/20250731_amlaa_lab1/: __init__.py  dataset.py  features.py  plots.py
20250731_amlaa_lab1/20250731_amlaa_lab1/modeling/: predict.py  train.py
20250731_amlaa_lab1/notebooks/: exploration_lab1.ipynb
