[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "20250731_amlaa_lab1"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Santiago Cardenas" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["20250731_amlaa_lab1"]
include = ["pyproject.toml", "20250731_amlaa_lab1/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["20250731_amlaa_lab1"]
force-sort-within-sections = true

