[project]
name = "20250731-amlaa-lab1"
version = "0.1.0"
description = ""
authors = [
    {name = "Santiago Cardenas",email = "scardenasc22@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (==2.2.2)",
    "jupyterlab (==4.4.4)",
    "scikit-learn (==1.5.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
